<resources>
    <string name="app_name">ShopIt</string>
    <string name="get_what_you_want">Get What You Want</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forget_Password_message">Enter the registered Email Address. A password reset link will be sent on your registered Email Address.</string>
    <string name="Submit">Submit</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an Account!</string>
    <string name="empty_field_toast">Empty Fields are not allowed</string>
    <string name="invalild">"Invalid Email or Password "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yourOrder">Your Order</string>
    <string name="signOut">Sign Out</string>
    <string name="your_account">Your Account</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notification</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>

</resources>