<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.LoginSignUp.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/forgot_pass"
                android:textColor="@color/black"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/btn_forgetPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/forget_Password_message"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                style="@style/et_textStyle"
                android:layout_width="354dp"
                android:layout_height="66dp"
                android:id="@+id/et_email"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text"
                android:drawableEnd="@drawable/email"
                android:hint="@string/email"
                android:paddingStart="42dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/btn_submit"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="160dp"
                android:backgroundTint="#F1C40F"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/Submit"
                android:textColor="@color/white"
                android:textSize="15sp"

                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>