<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Dashboard.Fragments.SettingFragment">

    <TextView
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_account"
        android:layout_alignEnd="@+id/btn_account"
        android:layout_marginHorizontal="160dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="110dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Settings"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20sp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_account"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/btn_yourOrder"
        android:layout_alignEnd="@+id/btn_yourOrder"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="#59C4C4C4"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/your_account"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_yourOrder"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/btn_signOut"
        android:layout_alignEnd="@+id/btn_signOut"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="#59C4C4C4"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/yourOrder"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_signOut"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#E74C3C"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/signOut"
        android:textColor="@color/white"
        android:textSize="15sp" />


</RelativeLayout>